--- a/DDD.Kitchen.WebApi/appsettings.json
+++ b/DDD.Kitchen.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=DDD;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Database=DDD1;Username=postgres;Password=123456"
   }
 }
