--- a/DDD.Kitchen.Infrastructure/DDD.Kitchen.Infrastructure.csproj
+++ b/DDD.Kitchen.Infrastructure/DDD.Kitchen.Infrastructure.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Bogus" Version="35.6.2" />
       <PackageReference Include="Microsoft.AspNetCore" Version="2.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.3.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     </ItemGroup>
 
