--- a/DDD.Kitchen.Infrastructure/DDD.Kitchen.Infrastructure.csproj
+++ b/DDD.Kitchen.Infrastructure/DDD.Kitchen.Infrastructure.csproj
@@ -11,7 +11,10 @@
       <PackageReference Include="Microsoft.AspNetCore" Version="2.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.3.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+      <PackageReference Include="Scrutor" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
