--- a/DDD.Kitchen.WebApi/appsettings.json
+++ b/DDD.Kitchen.WebApi/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=DDD;User Id=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Database=DDD;User Id=postgres;Password=123456",
+    "Redis": "localhost:6379"
   }
 }
