--- a/DDD.Kitchen.Application/DDD.Kitchen.Application.csproj
+++ b/DDD.Kitchen.Application/DDD.Kitchen.Application.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="FluentValidation" Version="11.11.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.3.0" />
     </ItemGroup>
 
 </Project>
